@@ -61,18 +61,12 @@
   <script type="application/x-javascript" src="chrome://calendar/content/calendar-dialog-utils.js"/>
 
   <box orient="vertical" flex="1">
-    <box orient="horizontal" align="left" pack="start">
+    <box orient="horizontal" align="baseline">
       <spacer style="width: 3em"/>
       <label value="&event.freebusy.suggest.slot;"/>
-
-      <menulist id="timerange-menulist"
-                oncommand="onTimeRange(this.value);">
-        <menupopup>
-          <menuitem label="&event.freebusy.time-range.office-hours;" value="office-hours"/>
-          <menuitem label="&event.freebusy.time-range.between;" value="range"/>
-        </menupopup>
-      </menulist>
-      <box orient="horizontal" id="range-time" collapsed="true">
+      <spacer style="width: 1em"/>
+      <box orient="horizontal" id="range-time" align="baseline">
+        <label value="&event.freebusy.time-range.between;"/>
         <timepicker id="range-starttime"/>
         <label value="&event.freebusy.time-range.and;"/>
         <timepicker id="range-endtime"/>
